# ChangeLog for www-plugins/stylish
# Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
# $Header $

*open-in-browser-1.10 (13 Jun 2011)

  13 Jun 2011; Martin Väth <martin@mvath.de>
  Version bump, remove old ebuild.
  Finally, a version working with current firefox was released -
  I was about to drop the package.

*open-in-browser-1.9 (12 Nov 2010)

  03 Jan 2011; Martin Väth <martin@mvath.de>
  Bump to EAPI=4.

  12 Nov 2010; Martin Väth <martin@mvath.de>
  New ebuild.