@@ -1,4 +1,4 @@
-DIST open_in_browser-1.10-fx+sm.xpi 16266 RMD160 a1310414d5a046211783b29f4726bcb6f22f375c SHA1 8b24bf8113a83e3dc003737af3bd4b8ff0dbd823 SHA256 d20e9ab7c8ee965fa929b02d35929e90f924b463c09ea0e7177275d92898b6f8
-EBUILD open-in-browser-1.10.ebuild 869 RMD160 ea2eda1a632b5a7c9af8ddd9ed98efc9bf0f7b34 SHA1 4240c3f09844b240b5451e08deb01d9da0701203 SHA256 80f02794319ebd26389b3e4acf3b0aa58079f8d439e18de17d468c037f5746bc
-MISC ChangeLog 553 RMD160 479dcdf02e66dd0e6c7bd9a41f338ded6f5781ae SHA1 e7da35b2b10d6eb16e63651e8af56c6e4a2048c2 SHA256 ed38b0d616c09c0c9e4bff0a3c632f6eb4c8aee7d30f8cff5e04b62d8a0651fb
+DIST open_in_browser-1.11-sm+fx.xpi 16276 RMD160 a4da7dcf1fa937d27316d9d57538d2ab9ffffdfe SHA1 43166b1a06bec43afa30e055d854d6beebd8255a SHA256 b47e4d335cb01d3edde853a7821401c0c12cbb8ed4d9b86ffbd4affbffc9114f
+EBUILD open-in-browser-1.11.ebuild 449 RMD160 742e12471b4339b4d4eac6052d24b29600ecd3aa SHA1 21d62b2635e251ff87fbcf7ccb110fcc7342d6bf SHA256 8b6305d6416744cb14f8d639b676064cb351393a7293f6a0fab7c0b345051154
+MISC ChangeLog 763 RMD160 797ed351fe67d1e5e8f2c1bb9dd59bf912675a75 SHA1 3bc2cb595665d89a67663bd345f9ee7a59c39fd3 SHA256 f031c1ec713a921191794dc419ba9fbfd5abbed28214ccb10b27d1fc6db96599
 MISC metadata.xml 264 RMD160 4c10b5dfc6857fcb2e9cdc91ff64bb5d4a5c2204 SHA1 69886f7e401bdf99a78d428ff4361991607e86c6 SHA256 dd28333300fc1ec2dbd96450bddbdd9e1061c1eff809e687442c53c91c05d86d
