@@ -2,6 +2,12 @@
 # Copyright 1999-2011 Gentoo Foundation; Distributed under the GPL v2
 # $Header $
 
+*open-in-browser-1.11 (08 Aug 2011)
+
+  08 Aug 2011; Martin Väth <martin@mvath.de>
+  Version bump, remove old ebuild.
+  Remove stupid postinst message which was there only by a copy mistake.
+
 *open-in-browser-1.10 (13 Jun 2011)
 
   13 Jun 2011; Martin Väth <martin@mvath.de>
